# TheLogLogger

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: sql.hpp
sqlite/: CMakeLists.txt
src/: main.cpp  sql.cpp
